@@ -1,5 +1,7 @@
 package com.farhetna.service;
 
+import com.farhetna.dto.*;
+import com.farhetna.mapper.BookingMapper;
 import com.farhetna.model.*;
 import com.farhetna.repository.*;
 import lombok.RequiredArgsConstructor;
@@ -7,11 +9,14 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class BookingService {
     
     private final BookingRepository bookingRepository;
@@ -19,20 +24,148 @@ public class BookingService {
     private final BookingModificationRepository modificationRepository;
     private final BlockedDateRepository blockedDateRepository;
     private final NotificationService notificationService;
+    private final CustomerRepository customerRepository;
     private final HallRepository hallRepository;
+    private final PackageRepository packageRepository;
+    private final AddOnRepository addOnRepository;
+    private final HallOwnerRepository hallOwnerRepository;
+    private final BookingMapper bookingMapper;
     
     private static final int MAX_MODIFICATIONS = 3;
+    
+    // ========== API Methods ==========
+    
+    @Transactional
+    public BookingResponse createBookingFromRequest(Long userId, BookingRequest request) {
+        Customer customer = customerRepository.findByUserId(userId)
+            .orElseThrow(() -> new RuntimeException("Customer not found"));
+        
+        Hall hall = hallRepository.findById(request.getHallId())
+            .orElseThrow(() -> new RuntimeException("Hall not found"));
+        
+        HallPackage selectedPackage = packageRepository.findById(request.getPackageId())
+            .orElseThrow(() -> new RuntimeException("Package not found"));
+        
+        List<AddOn> addOns = addOnRepository.findAllById(request.getAddOnIds());
+        
+        Booking booking = createBooking(customer, hall, selectedPackage, addOns, request.getEventDate());
+        
+        return bookingMapper.toResponse(booking);
+    }
+    
+    @Transactional
+    public BookingResponse modifyBookingFromRequest(Long bookingId, Long userId, 
+                                                    BookingModificationRequest request) {
+        Booking booking = bookingRepository.findById(bookingId)
+            .orElseThrow(() -> new RuntimeException("Booking not found"));
+        
+        if (!booking.getCustomer().getUser().getId().equals(userId)) {
+            throw new RuntimeException("Unauthorized");
+        }
+        
+        HallPackage newPackage = request.getPackageId() != null ?
+            packageRepository.findById(request.getPackageId())
+                .orElseThrow(() -> new RuntimeException("Package not found")) : null;
+        
+        List<AddOn> newAddOns = request.getAddOnIds() != null ?
+            addOnRepository.findAllById(request.getAddOnIds()) : null;
+        
+        booking = modifyBooking(bookingId, newPackage, newAddOns, request.getReason());
+        
+        return bookingMapper.toResponse(booking);
+    }
+    
+    @Transactional
+    public BookingResponse confirmBookingByOwner(Long bookingId, Long ownerId, 
+                                                  BookingConfirmationRequest request) {
+        HallOwner owner = hallOwnerRepository.findByUserId(ownerId)
+            .orElseThrow(() -> new RuntimeException("Hall owner not found"));
+        
+        Booking booking = confirmBooking(bookingId, owner, 
+            request.getPaymentMethod(), 
+            request.getPaymentReference(),
+            request.getScannedOffline() != null ? request.getScannedOffline() : false);
+        
+        return bookingMapper.toResponse(booking);
+    }
+    
+    @Transactional
+    public BookingResponse validateBookingCode(String code, Long ownerId) {
+        BookingCode bookingCode = bookingCodeService.validateCode(code);
+        Booking booking = bookingCode.getBooking();
+        
+        if (!booking.getHall().getOwner().getUser().getId().equals(ownerId)) {
+            throw new RuntimeException("Unauthorized");
+        }
+        
+        return bookingMapper.toResponse(booking);
+    }
+    
+    @Transactional(readOnly = true)
+    public BookingResponse getBookingById(Long bookingId, Long userId) {
+        Booking booking = bookingRepository.findById(bookingId)
+            .orElseThrow(() -> new RuntimeException("Booking not found"));
+        
+        return bookingMapper.toResponse(booking);
+    }
+    
+    @Transactional(readOnly = true)
+    public List<BookingResponse> getCustomerBookings(Long userId, BookingStatus status) {
+        Customer customer = customerRepository.findByUserId(userId)
+            .orElseThrow(() -> new RuntimeException("Customer not found"));
+        
+        List<Booking> bookings = bookingRepository.findByCustomerIdAndStatus(
+            customer.getId(), status);
+        
+        return bookings.stream()
+            .map(bookingMapper::toResponse)
+            .collect(Collectors.toList());
+    }
+    
+    @Transactional(readOnly = true)
+    public List<BookingResponse> getOwnerBookings(Long ownerId, BookingStatus status) {
+        HallOwner owner = hallOwnerRepository.findByUserId(ownerId)
+            .orElseThrow(() -> new RuntimeException("Hall owner not found"));
+        
+        List<Booking> bookings = bookingRepository.findByOwnerIdAndStatus(
+            owner.getId(), status);
+        
+        return bookings.stream()
+            .map(bookingMapper::toResponse)
+            .collect(Collectors.toList());
+    }
+    
+    @Transactional
+    public List<BookingResponse> syncOfflineBookings(Long ownerId, 
+                                                      List<BookingConfirmationRequest> requests) {
+        return requests.stream()
+            .map(request -> confirmBookingByOwner(
+                extractBookingIdFromCode(request.getCode()), 
+                ownerId, 
+                request))
+            .collect(Collectors.toList());
+    }
+    
+    @Transactional(readOnly = true)
+    public List<BookingResponse> getPendingSyncBookings(Long ownerId) {
+        List<Booking> bookings = bookingRepository.findBookingsNeedingSync();
+        
+        return bookings.stream()
+            .filter(b -> b.getHall().getOwner().getUser().getId().equals(ownerId))
+            .map(bookingMapper::toResponse)
+            .collect(Collectors.toList());
+    }
+    
+    // ========== Core Booking Logic ==========
     
     @Transactional
     public Booking createBooking(Customer customer, Hall hall, HallPackage selectedPackage,
                                   List<AddOn> addOns, LocalDate eventDate) {
         
-        // Check if date is available
         if (!isDateAvailable(hall.getId(), eventDate)) {
             throw new RuntimeException("Selected date is not available");
         }
         
-        // Create booking
         Booking booking = new Booking();
         booking.setCustomer(customer);
         booking.setHall(hall);
@@ -41,7 +174,6 @@ public class BookingService {
         booking.setEventDate(eventDate);
         booking.setStatus(BookingStatus.PENDING);
         
-        // Lock prices
         booking.setLockedPackagePrice(selectedPackage.getPrice());
         
         List<LockedAddOnPrice> lockedAddOnPrices = addOns.stream()
@@ -53,39 +185,33 @@ public class BookingService {
                 locked.setLockedPrice(addOn.getPrice());
                 return locked;
             })
-            .toList();
+            .collect(Collectors.toList());
         
         booking.setLockedAddOnPrices(lockedAddOnPrices);
         
-        // Calculate total price
         double totalPrice = selectedPackage.getPrice() + 
             addOns.stream().mapToDouble(AddOn::getPrice).sum();
         booking.setTotalPrice(totalPrice);
         
-        // Save booking
         booking = bookingRepository.save(booking);
         
-        // Generate booking code
         BookingCode bookingCode = bookingCodeService.generateCode(booking);
         booking.setBookingCode(bookingCode);
         
-        // Create soft lock on date
         createSoftLock(hall, eventDate);
         
-        // Send notification to hall owner
         notificationService.sendNewBookingNotification(booking);
         
         return bookingRepository.save(booking);
     }
     
     @Transactional
-    public Booking modifyBooking(Long bookingId, Package newPackage, 
+    public Booking modifyBooking(Long bookingId, HallPackage newPackage, 
                                   List<AddOn> newAddOns, String reason) {
         
         Booking booking = bookingRepository.findById(bookingId)
             .orElseThrow(() -> new RuntimeException("Booking not found"));
         
-        // Validate modification is allowed
         if (!booking.getCanModify()) {
             throw new RuntimeException("Booking cannot be modified");
         }
@@ -98,31 +224,16 @@ public class BookingService {
             throw new RuntimeException("Can only modify pending bookings");
         }
         
-        // Create modification record
         BookingModification modification = new BookingModification();
         modification.setBooking(booking);
         modification.setModificationNumber(booking.getModificationCount() + 1);
         modification.setReason(reason);
         modification.setModifiedAt(LocalDateTime.now());
         
-        // Store previous values
         modification.setPreviousPackageId(booking.getSelectedPackage().getId());
         modification.setPreviousPackagePrice(booking.getLockedPackagePrice());
-        
-        List<ModificationAddOn> previousAddOns = booking.getLockedAddOnPrices().stream()
-            .map(locked -> {
-                ModificationAddOn modAddOn = new ModificationAddOn();
-                modAddOn.setAddOnId(locked.getAddOnId());
-                modAddOn.setNameAr(locked.getAddOnNameAr());
-                modAddOn.setNameEn(locked.getAddOnNameEn());
-                modAddOn.setPrice(locked.getLockedPrice());
-                return modAddOn;
-            })
-            .toList();
-        modification.setPreviousAddOns(previousAddOns);
         modification.setPreviousTotalPrice(booking.getTotalPrice());
         
-        // Update booking with new values
         if (newPackage != null) {
             booking.setSelectedPackage(newPackage);
             booking.setLockedPackagePrice(newPackage.getPrice());
@@ -143,20 +254,8 @@ public class BookingService {
                     locked.setLockedPrice(addOn.getPrice());
                     return locked;
                 })
-                .toList();
+                .collect(Collectors.toList());
             booking.setLockedAddOnPrices(newLockedPrices);
-            
-            List<ModificationAddOn> newModAddOns = newAddOns.stream()
-                .map(addOn -> {
-                    ModificationAddOn modAddOn = new ModificationAddOn();
-                    modAddOn.setAddOnId(addOn.getId());
-                    modAddOn.setNameAr(addOn.getNameAr());
-                    modAddOn.setNameEn(addOn.getNameEn());
-                    modAddOn.setPrice(addOn.getPrice());
-                    return modAddOn;
-                })
-                .toList();
-            modification.setNewAddOns(newModAddOns);
             
             if (newPackage != null) {
                 modification.setType(ModificationType.PACKAGE_AND_ADDONS_CHANGED);
@@ -165,7 +264,6 @@ public class BookingService {
             }
         }
         
-        // Recalculate total price
         double newTotalPrice = booking.getLockedPackagePrice() + 
             booking.getLockedAddOnPrices().stream()
                 .mapToDouble(LockedAddOnPrice::getLockedPrice)
@@ -173,18 +271,13 @@ public class BookingService {
         booking.setTotalPrice(newTotalPrice);
         modification.setNewTotalPrice(newTotalPrice);
         
-        // Increment modification count
         booking.setModificationCount(booking.getModificationCount() + 1);
         
-        // Extend code validity
         BookingCode code = booking.getBookingCode();
         BookingCode extendedCode = bookingCodeService.extendCodeValidity(code.getId());
         modification.setCodeExtendedTo(extendedCode.getExpiresAt());
         
-        // Save modification record
         modificationRepository.save(modification);
-        
-        // Send notification to hall owner
         notificationService.sendBookingModifiedNotification(booking);
         
         return bookingRepository.save(booking);
@@ -202,11 +295,9 @@ public class BookingService {
             throw new RuntimeException("Can only confirm pending bookings");
         }
         
-        // Mark code as used
         BookingCode code = booking.getBookingCode();
         bookingCodeService.markAsUsed(code.getId(), confirmedBy, scannedOffline, null);
         
-        // Update booking status
         booking.setStatus(BookingStatus.CONFIRMED);
         booking.setConfirmedAt(LocalDateTime.now());
         booking.setConfirmedBy(confirmedBy);
@@ -214,15 +305,11 @@ public class BookingService {
         booking.setPaymentReference(paymentReference);
         booking.setCanModify(false);
         
-        // If offline, mark for sync
         if (scannedOffline) {
             booking.setNeedsSync(true);
         }
         
-        // Convert soft lock to hard lock
         convertToHardLock(booking.getHall(), booking.getEventDate());
-        
-        // Send confirmation notifications
         notificationService.sendBookingConfirmedNotification(booking);
         
         return bookingRepository.save(booking);
@@ -235,24 +322,46 @@ public class BookingService {
         
         for (Booking booking : expiredBookings) {
             booking.setStatus(BookingStatus.EXPIRED);
-            
-            // Remove soft lock
             removeSoftLock(booking.getHall(), booking.getEventDate());
             
-            // Invalidate code
             BookingCode code = booking.getBookingCode();
             code.setIsValid(false);
             
-            // Send notification
             notificationService.sendBookingExpiredNotification(booking);
         }
         
         bookingRepository.saveAll(expiredBookings);
     }
     
+    @Transactional
+    public void updateRatingEligibility() {
+        LocalDate yesterday = LocalDate.now().minusDays(1);
+        List<Booking> completedBookings = bookingRepository
+            .findCompletedBookingsForRating(yesterday);
+        
+        for (Booking booking : completedBookings) {
+            booking.setRatingEligible(true);
+            booking.setRatingEligibleAt(LocalDateTime.now());
+            notificationService.sendRatingRequestNotification(booking);
+        }
+        
+        bookingRepository.saveAll(completedBookings);
+    }
+    
+    @Transactional
+    public void syncOfflineBookings() {
+        List<Booking> needsSync = bookingRepository.findBookingsNeedingSync();
+        
+        for (Booking booking : needsSync) {
+            booking.setNeedsSync(false);
+            booking.setLastSyncedAt(LocalDateTime.now());
+        }
+        
+        bookingRepository.saveAll(needsSync);
+    }
+    
     @Transactional(readOnly = true)
     public boolean isDateAvailable(Long hallId, LocalDate date) {
-        // Check if date is blocked
         if (blockedDateRepository.existsByHallIdAndDate(hallId, date)) {
             BlockedDate blocked = blockedDateRepository
                 .findByHallIdAndDate(hallId, date).orElse(null);
@@ -262,7 +371,6 @@ public class BookingService {
             }
         }
         
-        // Check if there's a confirmed or pending booking
         List<BookingStatus> blockingStatuses = List.of(
             BookingStatus.CONFIRMED, 
             BookingStatus.PENDING
@@ -295,5 +403,10 @@ public class BookingService {
     private void removeSoftLock(Hall hall, LocalDate date) {
         blockedDateRepository.findByHallIdAndDate(hall.getId(), date)
             .ifPresent(blockedDateRepository::delete);
+    }
+    
+    private Long extractBookingIdFromCode(String code) {
+        BookingCode bookingCode = bookingCodeService.validateCode(code);
+        return bookingCode.getBooking().getId();
     }
 }
